tests/init/neg/default-this.check
-- Error: tests/init/neg/default-this.scala:9:8 ------------------------------------------------------------------------
9 |        compare() // error
  |        ^^^^^^^
  |        Cannot prove the argument is fully initialized. Calling trace:
  |        -> val result = updateThenCompare(5)	[ default-this.scala:11 ]
  |                        ^^^^^^^^^^^^^^^^^^^^
